# legion-pana

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
docs/: PROTOCOL.md
docs/superpowers/plans/: 2026-06-17-pana-phase1-foundation.md
docs/superpowers/specs/: 2026-06-17-pana-design.md
experiments/power-button/: NOTES.md  pwrled.sh
packaging/: config.example.toml  install.sh  pana-sleep-hook.sh  pana-tray.service  pana.desktop  panad.service.in  uninstall.sh
src/pana/: cli.py  daemon.py  tray.py
src/pana/core/: battery_watch.py  config.py  manager.py  monitor.py  presets.py  scheduler.py
src/pana/hw/: battery.py  cpufreq.py  detect.py  hid.py  lights.py  platform_profile.py  ppt.py  rapl.py  sensors.py  spectrum.py  transport.py
src/pana/ipc/: client.py  protocol.py  server.py
tests/: test_cli.py  test_daemon.py  test_smoke.py  test_tray.py
tests/core/: test_battery_watch.py  test_config.py  test_manager.py  test_monitor.py  test_presets.py  test_scheduler.py
tests/hw/: test_battery.py  test_cpufreq.py  test_detect.py  test_lights.py  test_platform_profile.py  test_ppt.py  test_rapl.py  test_sensors.py  test_spectrum.py  test_transport.py
tests/ipc/: test_protocol.py  test_socket.py
