[project]
name = "pana"
version = "0.1.0"
description = "Lenovo Legion 7 16IAX10 control + monitoring tool"
requires-python = ">=3.12"

[project.scripts]
pana = "pana.cli:main"
panad = "pana.daemon:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
