[project]
name = "pana"
version = "1.0.1"
description = "Lenovo Legion 7 16IAX10 control + monitoring tool (CPU power, battery, lighting)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Cole Miller", email = "colemiller2002@gmail.com" }]
keywords = ["lenovo", "legion", "16iax10", "cpu", "power", "battery", "rgb", "cooling", "linux"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]

[project.urls]
Repository = "https://github.com/cole-drift/legion-pana"

[project.scripts]
pana = "pana.cli:main"
panad = "pana.daemon:main"
pana-tray = "pana.tray:main"

[project.optional-dependencies]
dev = ["pytest>=7"]
tray = ["pystray>=0.19", "Pillow"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
